--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@trpc/client": "^10.43.0",
     "@trpc/react-query": "^10.43.0",
     "@trpc/server": "^10.43.0",
+    "axios": "^1.6.1",
     "next": "14.0.0",
+    "openai": "^4.17.5",
     "react": "^18",
     "react-dom": "^18"
   },
