--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^5.28.10",
     "@trpc/client": "^10.43.0",
     "@trpc/react-query": "^10.43.0",
     "@trpc/server": "^10.43.0",
@@ -17,7 +18,8 @@
     "next": "14.0.0",
     "openai": "^4.17.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "superjson": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
