--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "openai": "^4.17.5",
     "react": "^18",
     "react-dom": "^18",
-    "superjson": "^2.2.1"
+    "superjson": "^2.2.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
