--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@trpc/react-query": "^10.43.0",
     "@trpc/server": "^10.43.0",
     "axios": "^1.6.1",
+    "framer-motion": "^11.2.4",
     "next": "14.0.0",
     "openai": "^4.17.5",
     "react": "^18",
