--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@trpc/react-query": "^10.43.0",
     "@trpc/server": "^10.43.0",
     "axios": "^1.6.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.2.4",
     "next": "14.0.0",
     "openai": "^4.17.5",
     "react": "^18",
     "react-dom": "^18",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
