--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "axios": "^1.6.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.4",
-    "next": "14.0.0",
+    "next": "^15.0.3",
     "openai": "^4.17.5",
     "react": "^18",
     "react-dom": "^18",
